--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "windchime-app",
+  "name": "erins-windchime-app",
   "routes": [
       {
         "src": "^/static/(.*)",
@@ -11,5 +11,4 @@
         "dest": "/index.html"
       }
   ]
-}
 }
